--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*navbar edits*/
-.navbar{
-    background-color: #BABCBF;
-    margin-bottom: 0px;
-  }
+.navbar {
+  background-color: #BABCBF;
+  margin-bottom: 0px;
+}
 
-#head-nav{
-  color:  #6A6A6C;
+#head-nav {
+  color: #6A6A6C;
   font-size: 20px;
   padding-left: 40px;
   padding-right: 40px;
@@ -13,21 +13,21 @@
 }
 
 .navbar a:hover {
-  background-color: rgb(214, 183, 181, 0.4) ;
+  background-color: rgb(214, 183, 181, 0.4);
 }
 
-.navbar a:focus{
-  background:#F5F0ED;
+.navbar a:focus {
+  background: #F5F0ED;
 }
 
-h1{ 
+h1 {
   font-family: 'Nunito', sans-serif;
   color: #025B6D;
   text-align: center;
   padding-top: 40px;
 }
 
-h2{
+h2 {
   font-family: 'Baskervville', serif;
   color: #025B6D;
   padding-left: 40px;
@@ -35,18 +35,18 @@ h2{
   padding-bottom: 10px;
 }
 
-h3{
-    font-family: 'Nunito', sans-serif;
-    font-weight: 500;
-    font-size: 22px;
-    color: #D6B7B5;
-    padding-left: 50px;
-    padding-top: 10px;
+h3 {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+  color: #D6B7B5;
+  padding-left: 50px;
+  padding-top: 10px;
 }
 
 .center {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 
 .dot {
@@ -56,26 +56,26 @@ h3{
   display: inline-block;
 }
 
-.h2-2{
-    color: #6A6A6C;
-    margin-top: 10px;
+.h2-2 {
+  color: #6A6A6C;
+  margin-top: 10px;
 }
 
-p{
+p {
   font-family: 'Baskervville', serif;
   color: #6A6A6C;
   padding-left: 70px;
   padding-right: 70px;
 }
 
-#bullet{
+#bullet {
   font-family: 'Baskervville', serif;
   color: #6A6A6C;
   margin-left: 40px;
   margin-right: 70px;
 }
 
-#user-heading{
+#user-heading {
   font-size: 130%;
   margin-top: 20px;
   color: #025B6D;
@@ -91,18 +91,24 @@ p{
   text-decoration: none;
   display: inline-block;
 }
+
 /* port-lligat-sans-regular - latin */
 @font-face {
   font-family: 'Port Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Port Sans')
-       url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.svg#PortLligatSans') format('svg'); /* Legacy iOS */
+  src: url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local('Port Sans') url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/port-lligat-sans-v18-latin/port-lligat-sans-v18-latin-regular.svg#PortLligatSans') format('svg');
+  /* Legacy iOS */
 }
 
 /* concert-one-regular - latin */
@@ -110,13 +116,19 @@ p{
   font-family: 'Concert One';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.eot');
+  /* IE9 Compat Modes */
   src: local('Concert One'),
-       url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.svg') format('svg'); /* Legacy iOS */
+    url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/concert-one-v17-latin/concert-one-v17-latin-regular.svg') format('svg');
+  /* Legacy iOS */
 }
 
 /* lilita-one-regular - latin */
@@ -124,13 +136,19 @@ p{
   font-family: 'Lilita One';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.eot');
+  /* IE9 Compat Modes */
   src: local('Lilita One'),
-       url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.svg') format('svg'); /* Legacy iOS */
+    url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/lilita-one-v13-latin/lilita-one-v13-latin-regular.svg') format('svg');
+  /* Legacy iOS */
 }
 
 /* ibm-plex-sans-hebrew-regular - latin */
@@ -138,13 +156,19 @@ p{
   font-family: 'IBM Plex Sans Hebrew';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.eot');
+  /* IE9 Compat Modes */
   src: local('IBM Plex Sans Hebrew'),
-       url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.svg') format('svg'); /* Legacy iOS */
+    url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/ibm-plex-sans-hebrew-v10-latin/ibm-plex-sans-hebrew-v10-latin-regular.svg') format('svg');
+  /* Legacy iOS */
 }
 
 /* gurajada-regular - latin */
@@ -152,16 +176,22 @@ p{
   font-family: 'Gurajada';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.eot');
+  /* IE9 Compat Modes */
   src: local('Gurajada'),
-       url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.svg') format('svg'); /* Legacy iOS */
+    url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/gurajada-v15-latin/gurajada-v15-latin-regular.svg') format('svg');
+  /* Legacy iOS */
 }
 
-.subtitle{
+.subtitle {
   font-family: "IBM Plex Sans Hebrew";
   font-weight: bolder;
   letter-spacing: 0.3vw;
@@ -169,28 +199,29 @@ p{
 }
 
 @media screen and (max-width: 600px) {
-  .ip-icon{
-      width: 12vw;
+  .ip-icon {
+    width: 12vw;
   }
 }
 
 @media screen and (max-width: 991px) {
-  .ip-icon{
-      width: 10vw;
+  .ip-icon {
+    width: 10vw;
   }
 }
 
 @media screen and (min-width:991px) {
   .ip-icon {
-    width: 12vw;;
+    width: 12vw;
+    ;
   }
-  
+
 }
 
 
 @media screen and (max-width: 991px) {
-  .header-title{
-    font-family:'Lilita One';
+  .header-title {
+    font-family: 'Lilita One';
     letter-spacing: 0.75vw;
     font-size: 2rem;
   }
@@ -198,14 +229,14 @@ p{
 
 @media screen and (min-width:991px) {
   .header-title {
-    font-family:'Lilita One';
+    font-family: 'Lilita One';
     letter-spacing: 0.75vw;
     font-size: 2.75rem;
   }
-  
+
 }
 
-.wireframe-img{
+.wireframe-img {
   width: 90%;
   padding-left: 5%;
   padding-right: 5%;
@@ -216,13 +247,19 @@ p{
   font-family: 'Inria Sans';
   font-style: normal;
   font-weight: 300;
-  src: url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.eot');
+  /* IE9 Compat Modes */
   src: local('Inria Sans'),
-       url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-regular.svg') format('svg'); /* Legacy iOS */
+    url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-300.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/inria-sans-v14-latin/inria-sans-v14-latin-regular.svg') format('svg');
+  /* Legacy iOS */
 }
 
 
@@ -231,15 +268,52 @@ p{
   font-family: 'Inria Sans-400';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/inria-sans-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/inria-sans-v14-latin-regular.eot');
+  /* IE9 Compat Modes */
   src: local('Inria Sans-400'),
-       url('./fonts/inria-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/inria-sans-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/inria-sans-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/inria-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/inria-sans-v14-latin-regular.svg#InriaSans') format('svg'); /* Legacy iOS */
+    url('./fonts/inria-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/inria-sans-v14-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/inria-sans-v14-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/inria-sans-v14-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/inria-sans-v14-latin-regular.svg#InriaSans') format('svg');
+  /* Legacy iOS */
 }
 
-.secondary-subtitle{
+.secondary-subtitle {
   font-family: "Inria Sans";
+}
+
+.parallax {
+  min-height: 550px;
+  background: transparent;
+  padding: 20px;
+  background-color: #62B433;
+}
+
+.projectParallax {
+  min-height: 450px;
+  background: transparent;
+  padding: 20px;
+}
+
+.paratext {
+  padding-bottom: 5%;
+}
+
+.para1 {
+  z-index: 2;
+  position: relative;
+  text-align: center;
+}
+
+.outline {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  background: transparent;
 }
